WIDGET: Added initial settings app

--- a/tos/icons.conf
+++ b/tos/icons.conf
@@ -41,3 +41,6 @@ network="/etc/xdg/awesome/theme/icons/network.svg"
 upload="/etc/xdg/awesome/theme/icons/upload.svg"
 download="/etc/xdg/awesome/theme/icons/download.svg"
 warning="/etc/xdg/awesome/theme/icons/warning.svg"
+lan="/etc/xdg/awesome/theme/icons/lan.svg"
+calendar="/etc/xdg/awesome/theme/icons/calendar.svg"
+
