--- a/tos/colors.conf
+++ b/tos/colors.conf
@@ -62,3 +62,7 @@ tooltip_bg="232323"
 # taglist properties (the workspaces)
 taglist_occupied="ffffff"
 
+# bar charst in the settings application
+cpu_bar="f90273"
+ram_bar="017AFC"
+disk_bar="fdc400"
