--- a/tos/keys.conf
+++ b/tos/keys.conf
@@ -14,9 +14,9 @@ terminal = "Return" # mod + Return
 fullscreen = "f" # mod + f
 kill = "q" # mod + q
 floating = "c" # mod + c
-window_switch = "s" # mod + s 
+window_switch = "b" # mod + b 
 launcher = "d" # mod + d
-browser = "w" # mod + shift + w
+browser = "b" # mod + shift + b
 filemanager = "e" # mod + shift + e
 systemmonitor = "Escape" # mod + shift + Escape
 previous_workspace = "w" # mod + w
@@ -41,3 +41,4 @@ snapshot_area = "Print" # mod + Print (take a snapshot of a part of your screen)
 window_screenshot = "Print" # mod + shift +Print (take a screenshot of a specific window)
 emoji = "m" # mod + e (show a emoji selector screen)
 clipboard = "p" # mod + p (show clipboard history)
+settings = "s" # mod + s (show settings application)
