--- a/tos/plugins.conf
+++ b/tos/plugins.conf
@@ -1,6 +1,6 @@
 # This file is used to enable and add plugin into your TDE build
 # Their are 4 cotegories
-# notification, module, settings, topbar
+# notification, module, settings, topbar and settings app
 # We will describe each below
 # If you want to enable default widgets you need to prefix those with widget.
 # Plugins can be added in ~/.config/tde/
@@ -34,10 +34,10 @@ notification_5="widget.calculator"
 # This is the last plugin array used by the topbar
 # It is usually an icon that performs something when clicked
 #topbar-right_1="icon_button"
-topbar-right_1="github-contributions-widget"
-topbar-right_2="docker-widget"
-topbar-right_3="jira-widget"
 
 # topbar-left_1="icon_button"
 
 # topbar-center_1="icon_button"
+
+# these plugins appear in the settings application
+#settings_1="settings-app-widget"
