SETTINGS-APP: Added a color setting item

--- a/tos/colors.conf
+++ b/tos/colors.conf
@@ -45,13 +45,13 @@ background_focus="5a5a5a"
 background_urgent="3F3F3F"
 # override these for the blurred background properties
 # these are symlinked to background_hue_800 and background_hue_900
-background_800="000000"
-background_900="000000"
+#background_800="000000"
+#background_900="000000"
 background_transparent="66"
 
 # background effect in notification panel
-background_modal="ffffff20"
-background_modal_title="ffffff30"
+#background_modal="ffffff20"
+#background_modal_title="ffffff30"
 
 # border properties
 border_marked="CC9393"
