Added screen on time as a setting

--- a/tos/general.conf
+++ b/tos/general.conf
@@ -55,3 +55,6 @@ break_time="300"
 # Both H and M must be numerical values
 #break_time_start="08:30"
 #break_time_end="17:00"
+
+# how long should the screen stay on before auto locking/sleeping
+screen_on_time="120"
