Select correct theme mode (dark/light theme)

--- a/tos/colors.conf
+++ b/tos/colors.conf
@@ -35,14 +35,14 @@ background="blue_grey"
 
 
 # foreground properties
-foreground_normal="ffffffde"
-foreground_focus="e4e4e4"
-foreground_urgent="CC9393"
-foreground_critical="232323"
+#foreground_normal="ffffffde"
+#foreground_focus="e4e4e4"
+#foreground_urgent="CC9393"
+#foreground_critical="232323"
 
 # background properties
-background_focus="5a5a5a"
-background_urgent="3F3F3F"
+#background_focus="5a5a5a"
+#background_urgent="3F3F3F"
 # override these for the blurred background properties
 # these are symlinked to background_hue_800 and background_hue_900
 #background_800="000000"
@@ -54,13 +54,13 @@ background_transparent="66"
 #background_modal_title="ffffff30"
 
 # border properties
-border_marked="CC9393"
+#border_marked="CC9393"
 
 # tooltip properties eg notifications
-tooltip_bg="232323"
+#tooltip_bg="232323"
 
 # taglist properties (the workspaces)
-taglist_occupied="ffffff"
+#taglist_occupied="ffffff"
 
 # bar charst in the settings application
 cpu_bar="f90273"
