Module: Extend desktop functionality

--- a/tos/general.conf
+++ b/tos/general.conf
@@ -58,3 +58,7 @@ break_time="300"
 
 # how long should the screen stay on before auto locking/sleeping
 screen_on_time="120"
+
+# if the screen should turn off or not after a period of inactivity
+screen_timeout="1"
+
