Added the option to the conf

--- a/tos/general.conf
+++ b/tos/general.conf
@@ -62,3 +62,5 @@ screen_on_time="120"
 # if the screen should turn off or not after a period of inactivity
 screen_timeout="1"
 
+# disable the drawing of the desktop when set to 1 (only a wallpaper, no icons or anything els)
+disable_desktop="0"
