Add an option for low end hardware support

--- a/tos/general.conf
+++ b/tos/general.conf
@@ -64,3 +64,6 @@ screen_timeout="1"
 
 # disable the drawing of the desktop when set to 1 (only a wallpaper, no icons or anything els)
 disable_desktop="0"
+
+# When set to 1 -> we disable numerous options, settings and widgets to decrease cpu and memory usage, this is usefull for low end hardware
+weak_hardware="0"
