--- a/tests/Dockerfile
+++ b/tests/Dockerfile
@@ -1,9 +1,9 @@
 FROM f0xedb/tos-base:latest
 
 # install only the desktop environment
-RUN pacman -Syu awesome-tos --noconfirm
+RUN pacman -Syu tde --noconfirm
 
-# Mount Tos-desktop-environmnet to /data
+# Mount Tos-desktop-environment to /data
 WORKDIR /data
 
 CMD [ "bash", "test-runner.sh" ]
