Change default config settings

--- a/tos/general.conf
+++ b/tos/general.conf
@@ -67,3 +67,6 @@ disable_desktop="0"
 
 # When set to 1 -> we disable numerous options, settings and widgets to decrease cpu and memory usage, this is usefull for low end hardware
 weak_hardware="0"
+
+# When hovering over an application set the focus to that application or not
+autofocus="0"
