Added new config options

--- a/tos/icons.conf
+++ b/tos/icons.conf
@@ -29,6 +29,7 @@ restart="/etc/xdg/tde/theme/icons/restart.svg"
 search="/etc/xdg/tde/theme/icons/magnify.svg"
 monitor="/etc/xdg/tde/theme/icons/laptop.svg"
 wifi="/etc/xdg/tde/theme/icons/wifi.svg"
+wifi_off="/etc/xdg/tde/theme/icons/wifi_off.svg"
 volume="/etc/xdg/tde/theme/icons/volume-high.svg"
 muted="/etc/xdg/tde/theme/icons/volume-mute.svg"
 brightness="/etc/xdg/tde/theme/icons/brightness-7.svg"
@@ -42,4 +43,5 @@ upload="/etc/xdg/tde/theme/icons/upload.svg"
 download="/etc/xdg/tde/theme/icons/download.svg"
 warning="/etc/xdg/tde/theme/icons/warning.svg"
 lan="/etc/xdg/tde/theme/icons/lan.svg"
+lan_off="/etc/xdg/tde/theme/icons/lan_off.svg"
 calendar="/etc/xdg/tde/theme/icons/calendar.svg"
