TDE: modify rules and layout
Some rules were not working properly
New options have been added to the rules to ignore/allow titlebars
Each application can tell us to ignore the titlebar or not.

Additionally a new fairh layout has been added.
This layout allows for horizontal tiling, which is usefull when using a
virtual keyboard (used when in tablet mode or when using accessability
applications)

--- a/tos/tags.conf
+++ b/tos/tags.conf
@@ -51,3 +51,10 @@ screen_5_2 = "Spotify" # spotify doesn't work since they incorrectly set there c
 # Graphical editors go to the seventh
 screen_7_1 = "Inkscape"
 screen_7_2 = "Gimp"
+
+# You can also disable specific applications from using titlebars
+# Some applications already implement their own titlebars.
+# For example, gnome apps, deepin etc
+# It is recommended to show only their titlebar, otherwise you have multiple bars
+no_titlebar_1 = "Steam"
+no_titlebar_2 = "Onboard"
