TDE: added animations
This is the first patch containing animations for tde
Currently the left panel, right panel, exit screen and settigns
application use the animations

Documentation should follow (code and wiki wise)
As well as animations for the topbar widgets (music and info widgets)

--- a/tos/general.conf
+++ b/tos/general.conf
@@ -70,3 +70,6 @@ weak_hardware="0"
 
 # When hovering over an application set the focus to that application or not
 autofocus="0"
+
+# set the animation speed of the desktop components
+animation_speed="0.3"
