TDE: add option to reduce network consumption
In some cases you want to consume as little as possible network usage.
This option allows you to quickly disable this for TDE
It reduces the power consumption from roughly 20-50 MiB an hour to
10-100 KiB an hour.

--- a/tos/general.conf
+++ b/tos/general.conf
@@ -73,3 +73,9 @@ autofocus="0"
 
 # set the animation speed of the desktop components
 animation_speed="0.3"
+
+# make tde consume the least amount of network usage
+# when turned off (0) then we roughly consume 20-50MiB of data per hour (weather, covid, package updates, security vulnerabilities, etc)
+# when turned on non of these services will be active, this is usefull if you are using a mobile connections where network size is limited
+# the network usage in that case is roughly 10-100 KiB per hour
+minimize_network_usage="0"
