TDE: Allow bluetooth devices to disconnect
Add the option to disconnect from bluetooth devices in the settings
application

--- a/tos/icons.conf
+++ b/tos/icons.conf
@@ -38,6 +38,7 @@ memory="/etc/xdg/tde/theme/icons/memory.svg"
 harddisk="/etc/xdg/tde/theme/icons/harddisk.svg"
 thermometer="/etc/xdg/tde/theme/icons/thermometer.svg"
 plus="/etc/xdg/tde/theme/icons/plus.svg"
+minus="/etc/xdg/tde/theme/icons/minus.svg"
 network="/etc/xdg/tde/theme/icons/network.svg"
 upload="/etc/xdg/tde/theme/icons/upload.svg"
 download="/etc/xdg/tde/theme/icons/download.svg"
