MISC: change the default config style
We no longer require numerical ordering in the config files

--- a/tos/plugins.conf
+++ b/tos/plugins.conf
@@ -11,33 +11,33 @@
 
 
 # Notification widget plugins will be added in the notification center
-notification_1="widget.user-profile"
-notification_2="widget.social-media"
-notification_3="widget.weather"
-notification_4="widget.sars-cov-2"
-notification_5="widget.calculator"
-#notification_5="error-widget"
+notification="widget.user-profile"
+notification="widget.social-media"
+notification="widget.weather"
+notification="widget.sars-cov-2"
+notification="widget.calculator"
+#notification="error-widget"
 
 
 # This is a custom widget. The above are defaults
-#notification_6="hello-world-widget"
-#notification_6="calendar-widget"
-#notification_7="calendar-bare-widget"
+#notification="hello-world-widget"
+#notification="calendar-widget"
+#notification="calendar-bare-widget"
 
 # The next plugins are modules, modules are not shown to users but instead perform tasks in the background. Usually used as internal deamons
-#module_1="hello-world"
+#module="hello-world"
 
 # There is also a settings widget plugin array
 # Here you list plugins that will be added to the settings page
-#settings_1="hello-world-widget"
+#settings="hello-world-widget"
 
 # This is the last plugin array used by the topbar
 # It is usually an icon that performs something when clicked
-#topbar-right_1="icon_button"
+#topbar-right="icon_button"
 
-# topbar-left_1="icon_button"
+# topbar-left="icon_button"
 
-# topbar-center_1="icon_button"
+# topbar-center="icon_button"
 
 # these plugins appear in the settings application
-#settings_1="settings-app-widget"
+#settings="settings-app-widget"
