--- a/tos/tags.conf
+++ b/tos/tags.conf
@@ -26,35 +26,35 @@ tag_8=floating
 tag_gap_2="4"
 
 # TOS put all the browser on the first tag by default
-screen_1_1 = "firefoxdeveloperedition"
-screen_1_2 = "Google-chrome"
-screen_1_3 = "Brave-browser"
-screen_1_4 = "Chromium"
+screen_1 = "firefoxdeveloperedition"
+screen_1 = "Google-chrome"
+screen_1 = "Brave-browser"
+screen_1 = "Chromium"
 # TODO: Add vivaldi and opera
 
 
 
 # TOS puts all the code editors on the third window
-screen_3_1 = "Code"
-screen_3_2 = "code-insiders"
-screen_3_3 = "Android-studio"
-screen_3_4 = "jetbrains-studio" # the full android studio editor is called as such
+screen_3 = "Code"
+screen_3 = "code-insiders"
+screen_3 = "Android-studio"
+screen_3 = "jetbrains-studio" # the full android studio editor is called as such
 
 # file managers go to the fourth
-screen_4_1 = "Nemo"
-screen_4_2 = "Thunar"
+screen_4 = "Nemo"
+screen_4 = "Thunar"
 
 # Media players go to the fifth
-screen_5_1 = "Vlc"
-screen_5_2 = "Spotify" # spotify doesn't work since they incorrectly set there class name during startup
+screen_5 = "Vlc"
+screen_5 = "Spotify" # spotify doesn't work since they incorrectly set there class name during startup
 
 # Graphical editors go to the seventh
-screen_7_1 = "Inkscape"
-screen_7_2 = "Gimp"
+screen_7 = "Inkscape"
+screen_7 = "Gimp"
 
 # You can also disable specific applications from using titlebars
 # Some applications already implement their own titlebars.
 # For example, gnome apps, deepin etc
 # It is recommended to show only their titlebar, otherwise you have multiple bars
-no_titlebar_1 = "Steam"
-no_titlebar_2 = "Onboard"
+no_titlebar = "Steam"
+no_titlebar = "Onboard"
