TDE: route all audio through the volume api
Instead of manually calling functions and commands all over the place,
abstract it into the volume api of lib-tde.

This way we have more flexibility, also we provided a new `disable_software_volume_control` option in the general settings.
This option can disable software control of the audio stack (thus
delegating it to hardware such as an amp or dac)

--- a/tos/general.conf
+++ b/tos/general.conf
@@ -79,3 +79,8 @@ animation_speed="0.3"
 # when turned on non of these services will be active, this is usefull if you are using a mobile connections where network size is limited
 # the network usage in that case is roughly 10-100 KiB per hour
 minimize_network_usage="0"
+
+# Disable volume controls in software
+# Some external audio dacs/amps send volume change events to the software lowering the sound in software instead of hardware.
+# If you are using such a dac/amp then enabling this option disables all software audio changes
+#disable_software_volume_control="1"
