--- a/tos/tags.conf
+++ b/tos/tags.conf
@@ -43,6 +43,7 @@ screen_3 = "jetbrains-studio" # the full android studio editor is called as such
 # file managers go to the fourth
 screen_4 = "Nemo"
 screen_4 = "Thunar"
+screen_4 = "pcmanfm-qt"
 
 # Media players go to the fifth
 screen_5 = "Vlc"
