--- a/tos/tags.conf
+++ b/tos/tags.conf
@@ -7,6 +7,7 @@
 
 # tell the style of layout
 # By default dwindle is used
+
 # dwindle or 0 = spiral format
 # floating or 1 = normal Desktop environment behaviour
 # tile or 2 = tiling layout
@@ -43,6 +44,7 @@ screen_3 = "jetbrains-studio" # the full android studio editor is called as such
 # file managers go to the fourth
 screen_4 = "Nemo"
 screen_4 = "Thunar"
+screen_4 = "pcmanfm-qt"
 
 # Media players go to the fifth
 screen_5 = "Vlc"
