--- a/tos/tags.conf
+++ b/tos/tags.conf
@@ -7,7 +7,6 @@
 
 # tell the style of layout
 # By default dwindle is used
-
 # dwindle or 0 = spiral format
 # floating or 1 = normal Desktop environment behaviour
 # tile or 2 = tiling layout
@@ -31,7 +30,8 @@ screen_1 = "firefoxdeveloperedition"
 screen_1 = "Google-chrome"
 screen_1 = "Brave-browser"
 screen_1 = "Chromium"
-# TODO: Add vivaldi and opera
+screen_1 = "Vivaldi-stable"
+screen_1 = "Opera"
 
 
 
