--- a/tos/tags.conf
+++ b/tos/tags.conf
@@ -31,7 +31,8 @@ screen_1 = "firefoxdeveloperedition"
 screen_1 = "Google-chrome"
 screen_1 = "Brave-browser"
 screen_1 = "Chromium"
-# TODO: Add vivaldi and opera
+screen_1 = "Vivaldi-stable"
+screen_1 = "Opera"
 
 
 
