MISC: Fixed invalid comment
Fixed invalid comment for keyboard shortcuts.

--- a/tos/keys.conf
+++ b/tos/keys.conf
@@ -33,7 +33,7 @@ previous_layout = "space" # mod + shift + space
 restore_minimized = "n" # mod + Control + n
 dropdown_terminal = "F12" # F12
 toggle_sound = "t" # mod + t
-previous_song = "k" # mod + shift + k
+previous_song = "k" # mod + k
 next_song = "n" # mod + n
 screen = "r" # mod + r (change the screen layout)
 printscreen = "Print" # Print (take a snapshot of your entire screen)
