MISC: Fixed typo's
Some typo's were found in the repo.
This patch tries to fix some of them

--- a/tos/plugins.conf
+++ b/tos/plugins.conf
@@ -7,7 +7,7 @@
 # Each plugin must look as followed dir/init.lua
 # So each plugin has its own directory and MUST contain a init.lua
 # This file will be ran to generate the widget/module
-# Look in /etc/xdg/.config/tde for example plugins
+# Look in /etc/skel/.config/tde for example plugins
 
 
 # Notification widget plugins will be added in the notification center
