TDE: allow to toggle ontop mode using keyboard shortcuts
You can now use the keyboard shortcut mod+o to toggle ontop mode.
Usefull when you have a floating window that should always be ontop of
other windows even when focus shifts

--- a/tos/keys.conf
+++ b/tos/keys.conf
@@ -12,6 +12,7 @@ alt = "Mod1"
 
 terminal = "Return" # mod + Return
 fullscreen = "f" # mod + f
+ontop = "o" # mod + o
 kill = "q" # mod + q
 floating = "c" # mod + c
 window_switch = "b" # mod + b
