--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -13,7 +13,15 @@ jobs:
     - uses: actions/stale@v3
       with:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
-        stale-issue-message: "Your issue didn't have any activity, automatically marking it as stale. If this was wrong please notify us 😀"
-        stale-pr-message: "Your Pull Request didn't have any activity, automatically marking it as stale. If this was wrong please re-open it 😀"
+        
+        stale-issue-message: "Your issue didn't have any activity, automatically marking it as stale. This issues will be closed in a week, unless it gains activity"
+        stale-pr-message: "Your Pull Request didn't have any activity, automatically marking it as stale. This Pull Request will be closed in a week, unless it gains activity"
+        
+        close-issue-message: "Your issue has been stale for to long, closing it. If you feel this is incorrect please re-open it or create a new issue 🙂"
+        close-pr-message: "Your Pull Request has been stale for to long, closing it. If you feel this is incorrect please re-open it or create a new Pull Request 🙂"
+        
         stale-issue-label: 'no-issue-activity'
         stale-pr-label: 'no-pr-activity'
+        
+        days-before-stale: 60
+        days-before-close: 7
