--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -9,5 +9,5 @@ jobs:
     - uses: actions/first-interaction@v1
       with:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
-        issue-message: 'Thank you for creating your first issue! Our developers will be with you shortly'
-        pr-message: 'Thank you for creating your first pull request! Our developers will check it shortly'
+        issue-message: 'Thank you for creating your first issue! Our developers will be with you shortly 💜'
+        pr-message: 'Thank you for creating your first pull request! Our developers will check it shortly 💜'
