TDE: allow configuring master options for tags
You can now control the tag.master_count and tag.master_width_factor
fron the tags.conf configuration file.

The names for these properties are called tag_master_count_X and
tag_master_width_X respectivly

Replace X by the number of the tag, eg 1

This allows us to to have fine control over the look and feel of a tag
during startup.

--- a/tos/tags.conf
+++ b/tos/tags.conf
@@ -26,6 +26,17 @@ tag_8=floating
 # By default each tag gets 4 pixels of space
 tag_gap_2="4"
 
+# Configure the amount of master clients of the tag
+# By default there is one master per tag
+# Each layout has a different representation of a master
+tag_master_count_1="1"
+
+# Configure how much of the screen is occupied by the master
+# The value is normalized between 0 and 1
+# Where 0 means 0 pixels and one means consume the entire screen
+# By default it is set to 0.5
+tag_master_count_1="0.5"
+
 # TOS put all the browser on the first tag by default
 screen_1 = "firefoxdeveloperedition"
 screen_1 = "Google-chrome"
