TDE: Allow fading of screen wiboxes
We can now allow hovering over screen wiboxes
This can give you more screen space to occupie for tiling clients

Allowing to reduce the redundant noice generated

--- a/tos/general.conf
+++ b/tos/general.conf
@@ -84,3 +84,8 @@ minimize_network_usage="0"
 # Some external audio dacs/amps send volume change events to the software lowering the sound in software instead of hardware.
 # If you are using such a dac/amp then enabling this option disables all software audio changes
 #disable_software_volume_control="1"
+
+# fade the topbar and bottom bar when hovering over them
+# When not using the top or bottom bar they disapear, giving you more screen space
+# Toggle on or off using the 'on' or 'off' option
+fade="off"
