--- a/.github/workflows/test-suite.yml
+++ b/.github/workflows/test-suite.yml
@@ -6,7 +6,7 @@ name: Test Suite
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
   push:
-    branches: [ master ]
+    branches: [ master, release ]
   pull_request:
 
   # Allows you to run this workflow manually from the Actions tab
