MISC: Fix background color rendering for tooltips
This patch makes the tooltips follows the color's that they want
In addition We removed the hardcoded transparency of
beautiful.background.hue_800 and 900

--- a/tos/colors.conf
+++ b/tos/colors.conf
@@ -4,7 +4,7 @@
 primary="cyan"
 accent="cyan"
 # if the background property is set to light then all icons will be inverted to fit the light theme
-background="grey"
+background="blue_grey"
 
 #colors work as followed
 #they follow the HTML spec as the following format
