--- a/tos/plugins.conf
+++ b/tos/plugins.conf
@@ -33,6 +33,7 @@ notification="widget.calculator"
 
 # This is the last plugin array used by the topbar
 # It is usually an icon that performs something when clicked
+topbar-right="widget.countdown"
 topbar-right="widget.todo"
 
 # topbar-left="icon_button"
