TDE: Added a prompt with quick suggestions
Added a prompt that can fuzzy search text you entered and find generic
matches. It is much like mac os's spotlight, or albert/simular software.

Currently it is capable of the following:
* Searches for ssh hosts
* Opens URI's in the browser
* Opens the tde documentation
* Simple calculations
* Possibility for plugin functionality

--- a/tos/plugins.conf
+++ b/tos/plugins.conf
@@ -42,3 +42,6 @@ topbar-right="widget.todo"
 
 # these plugins appear in the settings application
 #settings="settings-app-widget"
+
+# these plugins can be used to fill in items in the prompt (mod+f2)
+# prompt="prompt-example-plugin"
