--- a/tos/tags.conf
+++ b/tos/tags.conf
@@ -7,6 +7,7 @@
 
 # TOS put all the browser on the first tag by default
 screen_1 = "firefoxdeveloperedition"
+screen_1 = "firefox"
 screen_1 = "Google-chrome"
 screen_1 = "Brave-browser"
 screen_1 = "Chromium"
