MISC: Add support for basic gradients in colors.conf
You can now specify gradients in the color.conf file

--- a/tos/colors.conf
+++ b/tos/colors.conf
@@ -17,7 +17,7 @@ background="blue_grey"
 #primary_hue_200='CE93D8'
 #primary_hue_300='BA68C8'
 #primary_hue_400='AB47BC'
-#primary_hue_500='9C27B0'
+#primary_hue_500='9C27B0' # This color is not allowed to be a gradient
 #primary_hue_600='8E24AA'
 #primary_hue_700='7B1FA2'
 #primary_hue_800='6A1B9A'
@@ -26,6 +26,21 @@ background="blue_grey"
 #primary_hue_A200='E040FB'
 #primary_hue_A400='D500F9'
 #primary_hue_A700='AA00FF'
+
+# You can also specify gradients
+# In the form linear:<fx>,<fy>:<tx>,<ty>:0,<f_color>:1,<t_color>
+# Where:
+# fx: from x position (Usually 0)
+# fy: from y position (Usually 0)
+
+# tx: to x position (Usually 0-1000)
+# tx: to y position (Usually 0-1000)
+
+# f_color the color to use on the fx,fy position
+# t_color the color to use on the tx,ty position
+
+# Example of a gradient from 0,0 to 0,500 starting with color 8E24AA to 00ACC1
+#primary_hue_800='linear:0,0:500,0:0,8E24AA:1,00ACC1'
 
 #accent_hue_500="F06292"
 # accent_hue_50='000000' to set the accent pallet
