BUG: Show correct variable name
background_<num> was wrong, it needs to include _hue_<num>

--- a/tos/colors.conf
+++ b/tos/colors.conf
@@ -60,8 +60,8 @@ background="blue_grey"
 #background_urgent="3F3F3F"
 # override these for the blurred background properties
 # these are symlinked to background_hue_800 and background_hue_900
-#background_800="000000"
-#background_900="000000"
+#background_hue_800="000000"
+#background_hue_900="000000"
 background_transparent="66"
 
 # background effect in notification panel
