MISC: Cleanup misc files
Generic patch that performs smaal cleanup of a few files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,12 @@
         "pacman's",
         "printf"
     ],
-    "Lua.completion.autoRequire": false
+    "Lua.completion.autoRequire": false,
+    "files.associations": {
+        ".luacheckrc": "lua",
+        "*.ld": "lua",
+        "*.ltp": "lua",
+        "*.tde": "lua",
+        "typeinfo": "c"
+    }
 }
