--- a/tde/configuration/picom.conf
+++ b/tde/configuration/picom.conf
@@ -17,6 +17,7 @@ shadow-radius = 12;
 shadow-offset-x = -12;
 shadow-offset-y = -12;
 shadow-opacity = 0.7;
+shadow-ignore-shaped = false;
 
 # shadow-red = 0.0;
 # shadow-green = 0.0;
