MISC: Make drag and drop look better
Make sure that the drag and drop functionality of the compositor works
better by not applying special effects

--- a/tde/configuration/picom.conf
+++ b/tde/configuration/picom.conf
@@ -36,6 +36,7 @@ shadow-exclude = [
 	"class_g = 'firefoxdeveloperedition' && argb",
 	"class_g = 'Rofi'",
 	"_GTK_FRAME_EXTENTS@:c",
+	"window_type = 'dnd'",
 	"_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'"
 ];
 
@@ -54,7 +55,8 @@ inactive-opacity-override = false;
 opacity-rule = [ 
 	"80:class_g = 'URxvt'",
 	"80:class_g = 'UXTerm'",
-	"80:class_g = 'XTerm'"
+	"80:class_g = 'XTerm'",
+	"100:window_type = 'dnd'",
 ];
 
 # inactive-dim = 0.2;
@@ -79,6 +81,7 @@ blur-background-fixed = true;
 blur-background-exclude = [
 	"window_type = 'desktop'",
 	"window_type = 'utility'",
+	"window_type = 'dnd'",
 	"class_g = 'slop'",
 	"class_g = 'Firefox' && argb",
 	# "name = 'rofi - Global Search'",
@@ -140,7 +143,7 @@ wintypes:
 	tooltip = { fade = true; shadow = false; focus = false;	};
 	normal = { shadow = false; };
 	dock = { shadow = false; };
-	dnd = { shadow = false; };
+	dnd = { shadow = false; opacity = 1.0; };
 	popup_menu = { shadow = true; focus = false; opacity = 0.90; };
 	dropdown_menu = { shadow = false; focus = false; };
 	above = { shadow = true; };
