MISC: Add a keyboard widget to change keyboard layouts
You can now specify a set of keyboard layouts

--- a/tos/keys.conf
+++ b/tos/keys.conf
@@ -43,3 +43,4 @@ window_screenshot = "Print" # mod + shift +Print (take a screenshot of a specifi
 emoji = "m" # mod + e (show a emoji selector screen)
 clipboard = "p" # mod + p (show clipboard history)
 settings = "s" # mod + s (show settings application)
+keyboard_layout = "i" # mod + i (Go to the next layout of your keyboard)
