--- a/tos/plugins.conf
+++ b/tos/plugins.conf
@@ -9,7 +9,6 @@
 # This file will be ran to generate the widget/module
 # Look in /etc/skel/.config/tde for example plugins
 
-
 # Notification widget plugins will be added in the notification center
 #notification="widget.user-profile"
 #notification="widget.social-media"
@@ -29,19 +28,12 @@ notification="widget.calculator"
 
 # There is also a settings widget plugin array
 # Here you list plugins that will be added to the settings page
-#settings="hello-world-widget"
+#settings="settings-app-widget"
 
 # This is the last plugin array used by the topbar
 # It is usually an icon that performs something when clicked
-topbar-right="widget.countdown"
-topbar-right="widget.todo"
-
-# topbar-left="icon_button"
-
-# topbar-center="icon_button"
-
-# these plugins appear in the settings application
-#settings="settings-app-widget"
+topbar="widget.countdown"
+topbar="widget.todo"
 
 # these plugins can be used to fill in items in the prompt (mod+f2)
 # prompt="prompt-example-plugin"
