MISC: Make the code completion only show one definition
Make sure we only show one definition instead of two

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,8 +15,7 @@
     "Lua.runtime.version": "Lua 5.3",
     "Lua.workspace.ignoreSubmodules": false,
     "Lua.workspace.library": [
-        "/usr/share/tde/lib",
-        "/etc/xdg/tde"
+        "/usr/share/tde/lib"
     ],
     "Lua.diagnostics.disable": [
         "lowercase-global",
@@ -30,5 +29,6 @@
         "root",
         "awful",
         "mouse"
-    ]
+    ],
+    "Lua.workspace.maxPreload": 2000
 }
