--- a/tos/keys.conf
+++ b/tos/keys.conf
@@ -10,37 +10,37 @@
 mod = "Mod4"
 alt = "Mod1"
 
-terminal = "Return" # mod + Return
-fullscreen = "f" # mod + f
-ontop = "o" # mod + o
-kill = "q" # mod + q
-floating = "c" # mod + c
-window_switch = "b" # mod + b
-launcher = "d" # mod + d
-browser = "b" # mod + shift + b
-filemanager = "e" # mod + shift + e
-systemmonitor = "Escape" # mod + shift + Escape
-previous_workspace = "w" # mod + w
-next_workspace = "a" # mod + a
-swap_workspace = "Escape" # mod + Escape
-action_center = "e" # mod + e
-toggle_focus = "Tab" # mod + Tab
-lock = "l" # mod + l
-notification_panel = "x" # mod + x
-restart_wm = "r" # mod + Control + r
-quit_wm = "q" # mod + Control + q
-next_layout = "space" # mod + space
-previous_layout = "space" # mod + shift + space
-restore_minimized = "n" # mod + Control + n
-dropdown_terminal = "F12" # F12
-toggle_sound = "t" # mod + t
-previous_song = "k" # mod + k
-next_song = "n" # mod + n
-screen = "r" # mod + r (change the screen layout)
-printscreen = "Print" # Print (take a snapshot of your entire screen)
-snapshot_area = "Print" # mod + Print (take a snapshot of a part of your screen)
-window_screenshot = "Print" # mod + shift +Print (take a screenshot of a specific window)
-emoji = "m" # mod + e (show a emoji selector screen)
-clipboard = "p" # mod + p (show clipboard history)
-settings = "s" # mod + s (show settings application)
-keyboard_layout = "i" # mod + i (Go to the next layout of your keyboard)
+# terminal = "Return" # mod + Return
+# fullscreen = "f" # mod + f
+# ontop = "o" # mod + o
+# kill = "q" # mod + q
+# floating = "c" # mod + c
+# window_switch = "b" # mod + b
+# launcher = "d" # mod + d
+# browser = "b" # mod + shift + b
+# filemanager = "e" # mod + shift + e
+# systemmonitor = "Escape" # mod + shift + Escape
+# previous_workspace = "w" # mod + w
+# next_workspace = "a" # mod + a
+# swap_workspace = "Escape" # mod + Escape
+# action_center = "e" # mod + e
+# toggle_focus = "Tab" # mod + Tab
+# lock = "l" # mod + l
+# notification_panel = "x" # mod + x
+# restart_wm = "r" # mod + Control + r
+# quit_wm = "q" # mod + Control + q
+# next_layout = "space" # mod + space
+# previous_layout = "space" # mod + shift + space
+# restore_minimized = "n" # mod + Control + n
+# dropdown_terminal = "F12" # F12
+# toggle_sound = "t" # mod + t
+# previous_song = "k" # mod + k
+# next_song = "n" # mod + n
+# screen = "r" # mod + r (change the screen layout)
+# printscreen = "Print" # Print (take a snapshot of your entire screen)
+# snapshot_area = "Print" # mod + Print (take a snapshot of a part of your screen)
+# window_screenshot = "Print" # mod + shift +Print (take a screenshot of a specific window)
+# emoji = "m" # mod + e (show a emoji selector screen)
+# clipboard = "p" # mod + p (show clipboard history)
+# settings = "s" # mod + s (show settings application)
+# keyboard_layout = "i" # mod + i (Go to the next layout of your keyboard)
