MISC: Add ability for starting numlock status on startup
We can now persist the numlock settings when numlockx is installed

--- a/build-utils/PKGBUILD
+++ b/build-utils/PKGBUILD
@@ -38,7 +38,8 @@ makedepends=('asciidoc' 'pkgconf' 'cmake' 'docbook-xsl' 'doxygen' 'imagemagick' 
 optdepends=('dex: autostart your desktop files'
             'kdeconnect: Link your phone with TDE'
             'openvpn: Connect to vpn servers through the settings'
-            'ufw: Add/Manage simple firewall rules')
+            'ufw: Add/Manage simple firewall rules',
+            'numlockx: save your numlock settings on startup')
 provides=('notification-daemon' 'awesome-tos' 'tde')
 conflicts=('awesome' 'awesome-git' 'awesome-tos' 'tde')
 backup=('etc/xdg/tde/rc.lua')
