--- a/build-utils/PKGBUILD
+++ b/build-utils/PKGBUILD
@@ -33,7 +33,7 @@ depends=('cairo' 'dbus' 'gdk-pixbuf2' 'imlib2' 'libxdg-basedir' 'lua53' 'lua53-l
          'pacman-contrib' 'xcb-util-errors' 'light-locker' 'awesome-freedesktop-git' 
          'lxsession-gtk3' 'rofi-tos' 'python-gobject' 'python-dbus' 'picom-tryone-tos' 
          'upower' 'rlwrap' 'imagemagick' 'libqalculate' 'autorandr' 'udiskie' 'librsvg' 
-         'tde-touchegg' 'qrencode')
+         'tde-touchegg')
 makedepends=('asciidoc' 'pkgconf' 'cmake' 'docbook-xsl' 'doxygen' 'imagemagick' 'ldoc' 'xmlto')
 optdepends=('dex: autostart your desktop files'
             'kdeconnect: Link your phone with TDE'
