MISC: Allow configuring the keyboard from tde settings
You can now specify the keyboard from the settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,7 +10,9 @@
         "*.ld": "lua",
         "*.ltp": "lua",
         "*.tde": "lua",
-        "typeinfo": "c"
+        "typeinfo": "c",
+        "xkb.h": "c",
+        "xcb_atom.h": "c"
     },
     "Lua.runtime.version": "Lua 5.3",
     "Lua.workspace.ignoreSubmodules": false,
