BUG: GTK4 based application popups don't have a strange blur
GTK4 popups and modals use _GTK_FRAME_EXTENTS and picom can't properly
calculate the real window size

--- a/tde/configuration/picom.conf
+++ b/tde/configuration/picom.conf
@@ -37,6 +37,10 @@ shadow-exclude = [
 	"class_g = 'Rofi'",
 	"_GTK_FRAME_EXTENTS@:c",
 	"window_type = 'dnd'",
+	"window_type = 'menu'",
+	"window_type = 'dropdown_menu'",
+	"window_type = 'popup_menu'",
+	"window_type = 'tooltip'",
 	"_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'"
 ];
 
@@ -67,7 +71,7 @@ opacity-rule = [
 
 blur: {
 	method = "dual_kawase";
-    strength = 15.0;
+	strength = 15.0;
 	# deviation = 1.0;
 	# kernel = "11x11gaussian";
 }
@@ -82,6 +86,10 @@ blur-background-exclude = [
 	"window_type = 'desktop'",
 	"window_type = 'utility'",
 	"window_type = 'dnd'",
+	"window_type = 'menu'",
+	"window_type = 'dropdown_menu'",
+	"window_type = 'popup_menu'",
+	"window_type = 'tooltip'",
 	"class_g = 'slop'",
 	"class_g = 'Firefox' && argb",
 	# "name = 'rofi - Global Search'",
