MISC: Add option to allow virtual displays
TDE can now allow or use the default handling for virtual displays

--- a/tos/general.conf
+++ b/tos/general.conf
@@ -89,3 +89,10 @@ minimize_network_usage="0"
 # When not using the top or bottom bar they disapear, giving you more screen space
 # Toggle on or off using the 'on' or 'off' option
 fade="off"
+
+
+# If you want tde to allow virtual displays to be connected
+# If this setting is disabled, we will automatically cleanup displays that get suddenly disconnected (Such as when you unplug a monitor)
+# If this setting is enabled ('1') then we don't do anything, you have to manually remove the virtual display (e.g. xrandr --output VIRTUAL1 --off)
+# However this may be desired if you want to create a virtual display and use VNC or simular tech to share it to an external monitor (See deskreen for example)
+allow_virtual_display="0"
