BUG: Add blur back to TDE tooltips and popups
Previously we added a patch for GTK 4 frame extends which broke TDE
popup blurring

--- a/tde/configuration/picom.conf
+++ b/tde/configuration/picom.conf
@@ -35,12 +35,14 @@ shadow-exclude = [
 	"class_g = 'Firefox' && argb",
 	"class_g = 'firefoxdeveloperedition' && argb",
 	"class_g = 'Rofi'",
+	"class_g ?= 'zoom'",
 	"_GTK_FRAME_EXTENTS@:c",
 	"window_type = 'dnd'",
-	"window_type = 'menu'",
-	"window_type = 'dropdown_menu'",
-	"window_type = 'popup_menu'",
-	"window_type = 'tooltip'",
+	"window_type = 'menu' && !class_g = 'TDE'",
+	"window_type = 'dropdown_menu'  && !class_g = 'TDE'",
+	"window_type = 'popup_menu' && !class_g = 'TDE'",
+	"window_type = 'tooltip' && !class_g = 'TDE'",
+	"name = 'cpt_frame_xcb_window'",
 	"_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'"
 ];
 
@@ -83,15 +85,16 @@ blur-background-fixed = true;
 # blur-kern = "5,5,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1";
 
 blur-background-exclude = [
-	"window_type = 'desktop'",
-	"window_type = 'utility'",
-	"window_type = 'dnd'",
-	"window_type = 'menu'",
-	"window_type = 'dropdown_menu'",
-	"window_type = 'popup_menu'",
-	"window_type = 'tooltip'",
+	"window_type = 'desktop' && !class_g = 'TDE'",
+	"window_type = 'utility' && !class_g = 'TDE'",
+	"window_type = 'dnd' && !class_g = 'TDE'",
+	"window_type = 'menu' && !class_g = 'TDE'",
+	"window_type = 'dropdown_menu' && !class_g = 'TDE'",
+	"window_type = 'popup_menu' && !class_g = 'TDE'",
+	"window_type = 'tooltip' && !class_g = 'TDE'",
 	"class_g = 'slop'",
 	"class_g = 'Firefox' && argb",
+	"class_g ?= 'zoom'",
 	# "name = 'rofi - Global Search'",
 	"_GTK_FRAME_EXTENTS@:c"
 ];
