MISC: Don't blur backdrops for TDE
The backdrops listening for mouseclicks shouldn't blur the desktop

--- a/tde/configuration/picom.conf
+++ b/tde/configuration/picom.conf
@@ -85,8 +85,8 @@ blur-background-fixed = true;
 # blur-kern = "5,5,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1";
 
 blur-background-exclude = [
-	"window_type = 'desktop' && !class_g = 'TDE'",
-	"window_type = 'utility' && !class_g = 'TDE'",
+	"window_type = 'desktop'",
+	"window_type = 'utility'",
 	"window_type = 'dnd' && !class_g = 'TDE'",
 	"window_type = 'menu' && !class_g = 'TDE'",
 	"window_type = 'dropdown_menu' && !class_g = 'TDE'",
