--- a/tde/configuration/picom.conf
+++ b/tde/configuration/picom.conf
@@ -95,6 +95,7 @@ blur-background-exclude = [
 	"class_g = 'slop'",
 	"class_g = 'Firefox' && argb",
 	"class_g ?= 'zoom'",
+	"class_g ?= 'touchegg'",
 	# "name = 'rofi - Global Search'",
 	"_GTK_FRAME_EXTENTS@:c"
 ];
