--- a/build-utils/PKGBUILD
+++ b/build-utils/PKGBUILD
@@ -27,7 +27,7 @@ pkgdesc='TDE (TOS Desktop Environment)'
 url='https://tos.odex.be/'
 arch=('x86_64')
 license=('GPL2')
-depends=('cairo' 'dbus' 'gdk-pixbuf2' 'imlib2' 'libxdg-basedir' 'lua53' 'lua53-lgi' 'pango'
+depends=('cairo' 'dbus' 'gdk-pixbuf2' 'imlib2' 'libxdg-basedir' 'lua53' 'lua53-lgi-tde' 'pango'
          'startup-notification' 'xcb-util-cursor' 'xcb-util-keysyms' 'xcb-util-wm'
          'xorg-xmessage' 'libxkbcommon-x11' 'libxkbcommon' 'xcb-util-xrm' 'tos-tools' 
          'pacman-contrib' 'xcb-util-errors' 'light-locker' 'awesome-freedesktop-git' 
