LIB-TDE: Added tag renderer api
The tag renderer now renders the last state a tag was in instead of
loading the first state, thus ensuring that the imagesurface contains
the latest piece of information that was displayed on a tag

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,7 +12,8 @@
         "*.tde": "lua",
         "typeinfo": "c",
         "xkb.h": "c",
-        "xcb_atom.h": "c"
+        "xcb_atom.h": "c",
+        "globalconf.h": "c"
     },
     "Lua.runtime.version": "Lua 5.3",
     "Lua.workspace.ignoreSubmodules": false,
