MISC: Use the https protocol instead of git for github
Github changed some policies: https://github.blog/2021-09-01-improving-git-protocol-security-github/

--- a/build-utils/PKGBUILD
+++ b/build-utils/PKGBUILD
@@ -44,7 +44,7 @@ provides=('notification-daemon' 'awesome-tos' 'tde')
 conflicts=('awesome' 'awesome-git' 'awesome-tos' 'tde')
 backup=('etc/xdg/tde/rc.lua')
 
-source=("git://github.com/ODEX-TOS/tos-desktop-environment.git#branch=$BRANCH")
+source=("git+https://github.com/ODEX-TOS/tos-desktop-environment.git#branch=$BRANCH")
 sha512sums=('SKIP') 
 validpgpkeys=('SKIP')
 
